ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: app
spec:
  rules:
  - host: "messenger.develop.sidebrand.es"
    http:
      paths:
      - path: /
        backend:
          serviceName: messenger-develop
          servicePort: 8080
  - host: "messenger.release.sidebrand.es"
    http:
      paths:
      - path: /
        backend:
          serviceName: messenger-release
          servicePort: 8080
  - host: "messenger.main.sidebrand.es"
    http:
      paths:
      - path: /
        backend:
          serviceName: messenger-main
          servicePort: 8080
